--- a/bootstrap-testing/style.css
+++ b/bootstrap-testing/style.css
@@ -1,7 +1,7 @@
 
 h1 {
     font-family: 'Oswald', sans-serif;
-    font-weight: semibold;
+    font-weight: bold;
     font-size: 36px;
     color: #333;
   }
@@ -37,7 +37,7 @@ h1 {
 }
 
 .text-container {
-	padding: 20px;
+	padding: 50px;
     height: 90vh;
 	color: #333;
     background-color: white;
@@ -45,8 +45,8 @@ h1 {
 
 .circle-container {
     position: relative;
-    width: 100px;
-    height: 300px;
+    width: 300px;
+    height: 100px;
 }
 
 .arrow {
@@ -98,7 +98,14 @@ h1 {
 	transform: translateX(100%);
 }
 
-/* canvas {
-	
-
-}  */
+#three-container {
+    /* background-color: #000; */
+    /* width: 200px; */
+    height: 85vh;
+    border: 1px solid black;
+    margin: 50px;
+    padding: 0px;
+    /* position: static; fixed or static */
+    /* top: 100px; */
+    /* left: 100px; */
+}
