--- a/bootstrap-testing/css/carousel-view-2-style.css
+++ b/bootstrap-testing/css/carousel-view-2-style.css
@@ -1,11 +1,68 @@
 
-h1 {
+h2 {
     font-family: 'Oswald', sans-serif;
     font-weight: bold;
     font-size: 36px;
-    color: #333;
+    color: #717070;
   }
-  
+
+.dot1 {
+	position: absolute;
+	display: grid;
+	margin-top: 30px;
+	margin-left: 8px;
+	height: 20px;
+	width: 20px;
+	background-color: black;
+	border-radius: 100px;
+}
+
+.dot1 p {
+	display: inline;
+	margin-top: 55px;
+	margin-left: -10px;
+	width: 200px;
+	color:#717070;
+}
+
+.dot2 {
+	position: absolute;
+	display: grid;
+	margin-top: 20px;
+	margin-left: 130px;
+	height: 40px;
+	width: 40px;
+	background-color: plum;
+	border-radius: 100px;
+}
+
+.dot2 p {
+	display: inline;
+	margin-top: 65px;
+	margin-left: -30px;
+	width: 200px;
+	color:#717070;
+}
+
+.dot3 {
+	position: absolute;
+	display: grid;
+	margin-left: 270px;
+	height: 80px;
+	width: 80px;
+	background-color: white;
+	border: 1px solid #717070;
+	border-radius: 100px;
+}
+
+.dot3 p {
+	display: inline;
+	margin-top: 83px;
+	margin-left: 18px;
+	width: 200px;
+	color:#717070;
+}
+
 .carousel {
 	position: relative;
 	width: 100%;
