--- a/bootstrap-testing/css/style.css
+++ b/bootstrap-testing/css/style.css
@@ -159,7 +159,7 @@ h2 {
     /* background-color: #000; */
     /* width: 200px; */
     height: 85vh;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin: 50px;
     padding: 0px;
     /* position: static; fixed or static */
